Run generate-clients and generate-datamodels
